# dbcrudgen-cpp-mysql

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MSSQL-CONFIGURE.md  MYSQL-CONFIGURE.md  ORACLE-CONFIGURE.md  ORACLE-STRUCTURE.md  README.md  SQLITE3-CONFIGURE.md  main.cpp
config/database/: mssql.sql  mysql.sql  oracle.sql
config/docker/: mssql-azure-edge.txt  mssql-de-2017.db.txt  mssql-xe-2017.db.txt  mysql.txt  oradb-ee-12.2-conn.txt  oradb-ee-12.2-slim-conn.txt  oradb-ee-12.2-slim.env.list  oradb-ee-12.2.txt  oradb-se-19.3-conn.txt  oradb-xe-11.2.txt  oradb-xe-18.4.md
config/linux/: linux.txt
core/database/columns/: MYSQLTableColumn.h  TableColumn.h
core/database/connection/: Connector.cpp  DatabaseConnection.h  MSSQLDatabaseConnection.h  MYSQLDatabaseConnection.h  OracleDatabaseConnection.h  SQLDatabaseConnection.h  SQLiteDatabaseConnection.h
core/database/connectors/: Connector.cpp  DatabaseConnector.h  MYSQLDatabaseConnector.h  OracleDatabaseConnector.h  SQLiteDatabaseConnector.h
core/database/connectors/credentials/: MYSQLDatabaseConnectionParams.h  OracleDatabaseConnectionParams.h  SQLiteDatabaseConnectionParams.h
core/database/error/: DatabaseError.h
core/database/exceptions/: MYSQLDatabaseException.h
core/database/executors/: MYSQLQueryExecutor.h  SQLiteQueryExecutor.h
core/database/prepared/: MYSQLStatements.h
core/database/relations/: DatabaseTable.h  MYSQLDatabaseTable.h
core/database/schemas/: DatabaseSchemas.h  MYSQLDatabaseSchemas.h
core/io/: FilesManager.h
creators/: DatabaseModelCreator.h  MYSQLDatabaseModelCreator.h  SQLiteDatabaseModelCreator.h
env-setups/: clang.txt  mssql-azure-edge.txt  mssql-xe-2017-conn.txt  mssql-xe-2017.db.txt  mysql.txt  oradb-ee-12.2-conn.txt  oradb-ee-12.2-slim.txt  oradb-ee-19.3.txt  oradb-se-19.3.txt  oradb-xe-11.2.db.env.list  oradb-xe-11.2.txt  ubuntu-odbc.sh
include/connectors/macos/mysql-connector-c++-8.0.31-macos12-x86-64bit/: INFO_BIN
include/linux/mysql-connector-cpp/: INFO_BIN
include/linux/oracle/instantclient_18_5/: SDK_README
include/macos/mysql-connector-c++-8.0.30-macos12-arm64/: INFO_BIN
include/microsoft/msodbcsql17/etc/: odbcinst.ini
include/mysql-connector-cpp/: INFO_SRC
include/oracle-instant-client/odbc/: ODBCRelnotesUS.htm  ODBC_IC_Readme_Unix.html  libsqora.so.11.1  odbc_update_ini.sh
include/oracle/instant-client/: BASIC_README  SQLPLUS_README  libnnz11  sqlplus
lang/dsl/: LanguageFilesProperties.h  PHPLangDSL.h
lang/parser/java/: JavaLangTemplateParser.h
lang/parser/mysql/: MYSQLLangParser.h
lib/linux/oracle/instantclient_12_2/: wrc  (+4 more)
lib/linux/sqlite/: libsqlite.so.0.8.6
models/: MYSQLDatabaseModel.h
res/db/admin/: mssql-admin-commands.sql
res/samples/database/: dbcrudgen.sql
res/templates/angular/: angular_form_control_init_bind_ts.mdl  angular_form_control_ts.mdl  angular_form_group_bind_ts.mdl  angular_form_group_ts.mdl  angular_form_html.mdl  angular_form_html_input.mdl  angular_form_ts.mdl  angular_html_form.mdl  angular_html_form_input.mdl  class_default_template.mdl  class_table_model_template.mdl  component_css.mdl  component_html.mdl  component_spec.mdl  component_ts.mdl  enum_template.mdl  html_table.mdl  html_table_body.mdl  html_table_head.mdl  module_class.mdl  service_class.mdl  service_class_spec.mdl
res/templates/cpp/: class_table.mdl  class_table_model_column_metadata.mdl  ctor_property_initializer.mdl  property_getter.mdl  property_getter_setter.mdl  property_setter.mdl  variable.mdl
res/templates/java/: default_class_template.mdl  default_method_template.mdl  default_variable_instance_template.mdl  default_variable_local_template.mdl  default_variable_static_template.mdl  getter_setter_template.mdl  getter_template.mdl  setter_template.mdl
res/templates/postman/: postman_collection.mdl  postman_folder.mdl  postman_request.mdl  postman_request_body.mdl
res/templates/python/: variable.mdl
res/templates/support/: help
res/templates/swift/: method.mdl
res/test/databases/: dbcrudgen-db-sqlite.db
src/: main.cpp
src/core/cli/: CliParser.h
src/creators/: MYSQLDatabaseModelCreator.h  OracleDatabaseModelCreator.h
src/databases/generic/: Column.h  Connection.h  Database.h  Flavor.h  Table.h  User.h
src/databases/utils/: DatabaseUtils.h
src/io/: FilesManager.h  FilesReader.h  FilesWriter.h
src/lang/dsl/: CPPLangDSL.h  JavaLangDSL.h  LanguageDSL.h
src/lang/parser/: LangTemplateParser.h
src/models/: MYSQLDatabaseModel.h  OracleDatabaseModel.h
src/orm/cli/: CliParser.h  DatabaseCrudActions.h
src/orm/codegen/: Databases.h  Frameworks.h  Languages.h  PostmanProjectCodeGen.h  ProjectCodeGen.h
src/orm/creators/: DatabaseModelCreator.h  MYSQLDatabaseModelCreator.h  OracleDatabaseModelCreator.h  ProjectCreator.h  SQLiteDatabaseModelCreator.h
src/orm/parsers/: SyntaxParser.h
src/orm/projects/: AndroidProjectModel.cpp  AndroidProjectModel.h  AngularProjectModel.h  CppMYSQLProjectModel.cpp  CppMYSQLProjectModel.h  CppOracleProjectModel.cpp  CppOracleProjectModel.h  CppProjectModel.cpp  CppProjectModel.h  CppSQLiteProjectModel.cpp  CppSQLiteProjectModel.h  JavaMYSQLProjectModel.cpp  JavaMYSQLProjectModel.h  JavaOracleProjectModel.cpp  JavaOracleProjectModel.h  JavaProjectModel.cpp  JavaProjectModel.h  JavaSQLiteProjectModel.cpp  JavaSQLiteProjectModel.h  JaxRsProjectModel.h  JaxWsProjectModel.h  LaravelPHPMYSQLProjectModel.h  LaravelProjectModel.h  PHPMYSQLProjectModel.cpp  PHPMYSQLProjectModel.h  PHPOracleProjectModel.h  PHPProjectModel.cpp  PHPProjectModel.h  PHPSQLiteProjectModel.cpp  PHPSQLiteProjectModel.h  PostmanProjectModel.h  ProjectModel.cpp  ProjectModel.h  SpringBootProjectModel.h  SwiftProjectModel.cpp  SwiftProjectModel.h
src/orm/templates/: FileSourceCodeTemplate.h  SourceCodeTemplate.cpp  SourceCodeTemplate.h  StringSourceCodeTemplate.h  TemplateFiles.h
src/orm/utils/: ConnectorUtils.h  StringUtils.h  TransactionUtils.h
src/utils/: ConnectorUtils.h  OracleTags.h  TransactionUtils.h
utils/: DbCrudgenError.h  StringUtils.h  Tags.h  TransactionUtils.h
(+1044 files in other folders)
